--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
           <div class="row">
             <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
               <div class="heading text-center">
-                <p class="heading-subtitle">working processes</p>
-                <h2 class="heading-title">How to works </h2>
+                <!-- <p class="heading-subtitle">working processes</p> -->
+                <h2 class="heading-title">How it works </h2>
               </div>
             </div>
             <!-- End .col-lg-6 -->
